fix: parallax now works on mobile

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -93,7 +93,7 @@ body
 
       //.labelholder::before
 
-@media only screen and (max-device-width: 1024px)
+@media (max-width: 991px)
   .parallax2
     height: 100vh !important
 
